--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,12 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fontsource/fredoka": "^5.2.5",
+        "fontsource": "^0.0.1-security",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-scripts": "^5.0.1",
-        "tailwindcss": "^3.0.0",
-        "postcss": "^8.4.0",
-        "autoprefixer": "^10.4.0"
+        "react-icons": "^5.5.0",
+        "react-scripts": "^5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -35,6 +35,9 @@
         ]
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.0.12",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.5.3",
         "postcss-cli": "^8.3.1",
         "web-vitals": "^4.2.4"
     }
